Simplified InputMethod-UI-event handling, resolved deadlocks, faster response, simplified head gestures input method